tests/ui/pattern/deref-patterns/ice-adjust-mode-unimplemented-for-constblock.stderr
error[E0532]: expected a pattern, found a function call
  --> $DIR/ice-adjust-mode-unimplemented-for-constblock.rs:4:9
   |
LL |     let vec![const { vec![] }]: Vec<usize> = vec![];
   |         ^^^^^^^^^^^^^^^^^^^^^^ not a tuple struct or tuple variant
   |
   = note: function calls are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>

error[E0532]: expected a pattern, found a function call
  --> $DIR/ice-adjust-mode-unimplemented-for-constblock.rs:4:9
   |
LL |     let vec![const { vec![] }]: Vec<usize> = vec![];
   |         ^^^^^^^^^^^^^^^^^^^^^^ not a tuple struct or tuple variant
   |
   = note: function calls are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/ice-adjust-mode-unimplemented-for-constblock.rs:4:14
   |
LL |     let vec![const { vec![] }]: Vec<usize> = vec![];
   |              ^^^^^^^^^^^^^^^^
   |
   = help: use a named `const`-item or an `if`-guard (`x if x == const { ... }`) instead

error[E0164]: expected tuple struct or tuple variant, found associated function `::alloc::boxed::Box::new_uninit`
  --> $DIR/ice-adjust-mode-unimplemented-for-constblock.rs:4:9
   |
LL |     let vec![const { vec![] }]: Vec<usize> = vec![];
   |         ^^^^^^^^^^^^^^^^^^^^^^ `fn` calls are not allowed in patterns
   |
   = help: for more information, visit https://doc.rust-lang.org/book/ch19-00-patterns.html

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0164, E0532.
For more information about an error, try `rustc --explain E0164`.
